--- a/chain-sensors-contracts/package.json
+++ b/chain-sensors-contracts/package.json
@@ -5,16 +5,19 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1"
+    "bn.js": "^5.2.2"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
-    "ts-mocha": "^10.0.0",
-    "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "typescript": "^5.7.3",
-    "prettier": "^2.6.2"
+    "@coral-xyz/anchor": "^0.31.1",
+    "@solana/spl-token": "^0.4.13",
+    "@types/bn.js": "^5.1.6",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^22.15.14",
+    "chai": "^4.5.0",
+    "mocha": "^9.2.2",
+    "prettier": "^2.6.2",
+    "ts-mocha": "^10.1.0",
+    "typescript": "^5.8.3"
   }
 }
