--- a/chain-sensors-contracts/tsconfig.json
+++ b/chain-sensors-contracts/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "types": ["mocha", "chai"],
-    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "mocha", "chai"],
     "lib": ["es2015"],
     "module": "commonjs",
     "target": "es6",
-    "esModuleInterop": true
-  }
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strict": true
+  },
+  "include": ["tests/**/*"],
+  "exclude": ["node_modules"]
 }
