--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -55,4 +55,10 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+ca-cert.pem
+ca-key.pem
+broker-cert.pem
+broker-key.pem
+broker.csr
 keypair.json
+reda.json
