--- a/backend/package.json
+++ b/backend/package.json
@@ -24,14 +24,22 @@
     "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
+    "aedes": "^0.51.3",
+    "aedes-server-factory": "^0.2.1",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.1",
     "mqtt": "^5.12.0",
+    "node-forge": "^1.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "tus-js-client": "^4.3.1",
     "uuid": "^11.1.0",
     "walrus-sdk": "^1.0.1"
   },
