--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^13.4.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "mqtt": "^5.12.0",
