--- a/backend/package.json
+++ b/backend/package.json
@@ -24,20 +24,31 @@
     "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
+    "@types/bcrypt": "^5.0.2",
     "aedes": "^0.51.3",
     "aedes-server-factory": "^0.2.1",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "connect-redis": "^8.0.3",
+    "decrypt": "^0.0.1",
+    "express-session": "^1.18.1",
     "firebase-admin": "^13.4.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "mqtt": "^5.12.0",
     "node-forge": "^1.3.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "redis": "^5.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "tus-js-client": "^4.3.1",
@@ -49,8 +60,10 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
