--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "register-metadata": "ts-node src/scripts/register-metadata.ts",
+    "verify-metadata": "ts-node src/scripts/verify-metadata.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
+    "@lightprotocol/compressed-token": "^0.22.0",
+    "@lightprotocol/stateless.js": "^0.22.0",
+    "@lightprotocol/zk-compression-cli": "^0.27.0",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -33,8 +40,9 @@
     "@types/bcrypt": "^5.0.2",
     "aedes": "^0.51.3",
     "aedes-server-factory": "^0.2.1",
-    "axios": "^1.9.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "bs58": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "connect-redis": "^8.0.3",
