--- a/chain_sensors/programs/chain_sensors/Cargo.toml
+++ b/chain_sensors/programs/chain_sensors/Cargo.toml
@@ -20,7 +20,7 @@ custom-panic = []
 anchor-debug = []
 
 [dependencies]
-anchor-lang = "0.31.1"
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = "0.31.1"
 arcium-anchor = "0.2.0"
 arcium-macros = "0.2.0"
