--- a/chainsensors-sim/.gitignore
+++ b/chainsensors-sim/.gitignore
@@ -9,3 +9,22 @@ health.csr.pem
 Reda-air-0022-cert.pem
 Reda-air-0022-key.pem
 Reda-air-0022.csr.pem
+Rahmani-air-2025-cert.pem
+Rahmani-air-2025-key.pem
+Rahmani-air-2025.csr.pem
+saad-air-2025-cert.pem
+saad-air-2025-key.pem
+saad-air-2025.csr.pem
+Rahmani-air-2025-cert.pem
+Rahmani-air-2025-key.pem
+Rahmani-air-2025.csr.pem
+Reda-airquality-2025-cert.pem
+Reda-airquality-2025-key.pem
+Reda-airquality-2025.csr.pem
+Rahmani-airquality-2025-cert.pem
+Rahmani-airquality-2025-key.pem
+Rahmani-airquality-2025.csr.pem
+Saad-airquality-2025-cert.pem
+Saad-airquality-2025-key.pem
+Saad-airquality-2025.csr.pem
+
