--- a/chain_sensors/Anchor.toml
+++ b/chain_sensors/Anchor.toml
@@ -3,10 +3,10 @@ package_manager = "yarn"
 
 [features]
 resolution = true
-skip-lint = false
+skip-lint = true
 
 [programs.localnet]
-chain_sensors = "6wMahpkyRSSyTaoJ97vGPG79nVBurwATXPSQBEV63hjf"
+chain_sensors = "D1hTFh5zn3q5ZAN9UQKePqfgk9cTYrfJsjkRYk589Duz"
 
 [registry]
 url = "https://api.apr.dev"
@@ -16,7 +16,7 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "anchor build && yarn ts-mocha -p ./tsconfig.json -t 1000000 'tests/**/*.ts'"
 
 [test]
 startup_wait = 5000
@@ -28,6 +28,4 @@ address = "BKck65TgoKRokMjQM3datB9oRwJ8rAj2jxPXvHXUvcL6"
 program = "/home/reda-37/yo/ChainSensors-V1/chain_sensors/artifacts/arcium_program_0.2.0.so"
 
 [test.validator]
-bind_address = "0.0.0.0"
-ledger = ".anchor/test-ledger"
-rpc_port = 8899
+url = "http://127.0.0.1:8890"
