--- a/chainsensors-sim/.gitignore
+++ b/chainsensors-sim/.gitignore
@@ -27,4 +27,33 @@ Rahmani-airquality-2025.csr.pem
 Saad-airquality-2025-cert.pem
 Saad-airquality-2025-key.pem
 Saad-airquality-2025.csr.pem
-
+zeb-2025-cert.pem
+zeb-2025-key.pem
+zeb-2025.csr.pem
+zeb-2025.dek
+zeb-2025.mxe_capsule.blobId
+mohamed-Reda-airquality-2025-cert.pem
+mohamed-Reda-airquality-2025-key.pem
+mohamed-Reda-airquality-2025.csr.pem
+mohamed-Reda-airquality-2025.dek
+mohamed-Reda-airquality-2025.mxe_capsule.blobId
+mohamed-Reda-OBD-Tesla-2025-cert.pem
+mohamed-Reda-OBD-Tesla-2025-key.pem
+mohamed-Reda-OBD-Tesla-2025.csr.pem
+mohamed-Reda-OBD-Tesla-2025.dek
+mohamed-Reda-OBD-Tesla-2025.mxe_capsule.blobId
+MMohamed-Rahmani-OBD-Tesla-2025-cert.pem
+MMohamed-Rahmani-OBD-Tesla-2025-key.pem
+MMohamed-Rahmani-OBD-Tesla-2025.csr.pem
+MMohamed-Rahmani-OBD-Tesla-2025.dek
+MMohamed-Rahmani-OBD-Tesla-2025.mxe_capsule.blobId
+mohamed-OBD-Tesla-2025-cert.pem
+mohamed-OBD-Tesla-2025-key.pem
+mohamed-OBD-Tesla-2025.csr.pem
+mohamed-OBD-Tesla-2025.dek
+mohamed-OBD-Tesla-2025.mxe_capsule.blobId
+mohamed-Rahmani-OBD-Tesla-2025-cert.pem
+mohamed-Rahmani-OBD-Tesla-2025-key.pem
+mohamed-Rahmani-OBD-Tesla-2025.csr.pem
+mohamed-Rahmani-OBD-Tesla-2025.dek
+mohamed-Rahmani-OBD-Tesla-2025.mxe_capsule.blobId
