--- a/chainsensors-sim/.gitignore
+++ b/chainsensors-sim/.gitignore
@@ -57,3 +57,9 @@ mohamed-Rahmani-OBD-Tesla-2025-key.pem
 mohamed-Rahmani-OBD-Tesla-2025.csr.pem
 mohamed-Rahmani-OBD-Tesla-2025.dek
 mohamed-Rahmani-OBD-Tesla-2025.mxe_capsule.blobId
+
+pitasa-2026-cert.pem
+pitasa-2026-key.pem
+pitasa-2026.csr.pem
+pitasa-2026.dek
+pitasa-2026.metadata.json
