--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@lightprotocol/zk-compression-cli": "^0.27.0",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
