--- a/chain_sensors/Arcium.toml
+++ b/chain_sensors/Arcium.toml
@@ -3,3 +3,7 @@
 nodes = 2
 # number of seconds to wait for the localnet to come online
 localnet_timeout_secs = 60
+
+[devnet]
+# devnet configuration for production builds
+cluster = "devnet"
