--- a/chainsensors-sim/.gitignore
+++ b/chainsensors-sim/.gitignore
@@ -69,3 +69,8 @@ sexy-2026.csr.pem
 sexy-2026-key.pem
 sexy-2026.dek
 sexy-2026.metadata.json
+tht-2026-cert.pem
+tht-2026-key.pem
+tht-2026.csr.pem
+tht-2026.dek
+tht-2026.metadata.json
