--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "register-metadata": "ts-node src/scripts/register-metadata.ts",
-    "verify-metadata": "ts-node src/scripts/verify-metadata.ts"
+    "verify-metadata": "ts-node src/scripts/verify-metadata.ts",
+    "test:walrus-rate-limit": "node test-walrus-rate-limiting.js"
   },
   "dependencies": {
     "@arcium-hq/client": "^0.2.0",
@@ -58,6 +59,7 @@
     "mongoose": "^8.14.1",
     "mqtt": "^5.12.0",
     "node-forge": "^1.3.1",
+    "p-queue": "^8.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -75,15 +77,19 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
+    "@types/ws": "^7.4.7",
+    "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "fs-extra": "^10.1.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
@@ -92,7 +98,9 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "ws": "^8.18.3",
+    "yargs": "^17.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
