--- a/package.json
+++ b/package.json
@@ -5,13 +5,28 @@
   "private": true,
   "scripts": {
     "arcium:build:devnet": "mkdir -p build && cd chain_sensors && arcium build && cp build/*.arcis ../build/ && cd ../build && for f in *.arcis; do cp \"$f\" \"${f%%.arcis}_devnet.arcis\"; done",
-    "program:build": "pnpm arcium:build:devnet && cd chain_sensors && anchor build"
+    "program:build": "npm run arcium:build:devnet && cd chain_sensors && anchor build",
+    "backend:start": "cd backend && npm start",
+    "backend:dev": "cd backend && npm run start:dev",
+    "frontend:start": "cd frontend && npm start",
+    "frontend:dev": "cd frontend && npm run dev"
   },
-  "devDependencies": {},
   "workspaces": [
     "frontend",
     "backend",
     "chain_sensors",
     "chainsensors-sim"
-  ]
+  ],
+  "dependencies": {
+    "@solana/buffer-layout": "^4.0.1",
+    "@solana/buffer-layout-utils": "^0.2.0",
+    "@solana/codecs": "^3.0.1",
+    "@solana/spl-token-group": "^0.0.7",
+    "@solana/spl-token-metadata": "^0.1.6",
+    "@solana/spl-token-registry": "^0.2.4574",
+    "chalk": "^5.6.0",
+    "class-validator": "^0.14.2",
+    "mongoose": "^8.18.0",
+    "validator": "^13.15.15"
+  }
 }
