--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/bull": "^11.0.3",
     "@nestjs/common": "^10.4.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -40,6 +41,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^6.0.0",
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.4",
@@ -49,10 +51,12 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bs58": "^6.0.0",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "connect-redis": "^8.0.3",
     "decrypt": "^0.0.1",
+    "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.4.0",
     "mongodb": "^6.16.0",
@@ -63,7 +67,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "redis": "^5.0.1",
+    "prom-client": "^15.1.3",
+    "redis": "^5.8.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "tus-js-client": "^4.3.1",
