--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tweetnacl": "^1.0.3",
+    "uuid": "^8.3.2",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
