--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chalk": "^5.6.0",
     "class-validator": "^0.14.2",
     "mongoose": "^8.18.0",
+    "uuid": "^8.3.2",
     "validator": "^13.15.15"
   }
 }
