--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,8 +43,10 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-base": "latest",
+    "@solana/wallet-adapter-phantom": "latest",
     "@solana/wallet-adapter-react": "latest",
     "@solana/wallet-adapter-react-ui": "latest",
+    "@solana/wallet-adapter-solflare": "latest",
     "@solana/wallet-adapter-wallets": "latest",
     "@solana/web3.js": "latest",
     "autoprefixer": "^10.4.20",
@@ -52,7 +54,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.7.1",
     "framer-motion": "^12.23.9",
