--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,11 +43,10 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-base": "latest",
-    "@solana/wallet-adapter-phantom": "latest",
+    "@solana/wallet-adapter-phantom": "^0.9.24",
     "@solana/wallet-adapter-react": "latest",
     "@solana/wallet-adapter-react-ui": "latest",
-    "@solana/wallet-adapter-solflare": "latest",
-    "@solana/wallet-adapter-wallets": "latest",
+    "@solana/wallet-adapter-solflare": "^0.6.28",
     "@solana/web3.js": "latest",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
